--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,39 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
+version: 2.1
+
+orbs:
+  gcp-cli: circleci/gcp-cli@1.8.2
+  gcp-gke: circleci/gcp-gke@0.2.0
+
 jobs:
   build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:10
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
+    description: Build and push service docker image
+    machine: true
     steps:
+      # Install `gcloud`
+      - gcp-cli/install
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: npm ci
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      # output variables for visibility
+      - run:
+          command: |
+            echo "CIRCLE_BRANCH=$CIRCLE_BRANCH"
+            echo "CIRCLE_JOB=$CIRCLE_JOB"
+            echo "CIRCLE_PROJECT_REPONAME=$CIRCLE_PROJECT_REPONAME"
+            echo "CIRCLE_PROJECT_USERNAME=$CIRCLE_PROJECT_USERNAME"
+            echo "CIRCLE_REPOSITORY_URL=$CIRCLE_REPOSITORY_URL"
+            echo "CIRCLE_USERNAME=$CIRCLE_USERNAME"
+            echo "CIRCLE_SHA1=$CIRCLE_SHA1"
+      - run:
+          command: |
+            echo Authenticating...
+            echo ${WORKSHOP_CI_ACCOUNT_TOKEN_BASE64} | base64 --decode > .WORKSHOP_CI_ACCOUNT_TOKEN.json
+            gcloud auth activate-service-account ${WORKSHOP_CI_USER} --key-file=.WORKSHOP_CI_ACCOUNT_TOKEN.json >/dev/null 2>&1
+            gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io >/dev/null 2>&1
+            set -x
+            image=gcr.io/unity-ads-workshop-test/sami-kube-maat
+            docker build -t ${image}:${CIRCLE_SHA1} .
+            docker push ${image}:${CIRCLE_SHA1}
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker tag ${image}:${CIRCLE_SHA1} ${image}:master
+              docker push ${image}:master
+            fi
